ADD: Templates for main content pages

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8175,7 +8175,7 @@ input, select, textarea {
 		}
 
 /* Index */
-
+    /* Type orangejuice to find this again */
 	.index > * {
 		padding: 3rem 0 1rem 0 ;
 		display: -moz-flex;
