CHANGE: Thickness of navbar

--- a/content/assets/css/main.css
+++ b/content/assets/css/main.css
@@ -7,6 +7,9 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
+.navbar-nav > li > a {padding-top:0px !important; padding-bottom:0px !important;}
+.navbar {min-height:25px !important}
+
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
 pre, a, abbr, acronym, address, big, cite,
