ADD: First update to levins new wishes

--- a/content/templates/navbar_template.html
+++ b/content/templates/navbar_template.html
@@ -12,17 +12,13 @@
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
                 <!-- <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
-                <a class="nav-link {{ intro_active }}" href="intro.html">Intro</a>
+                <a class="nav-link {{ about_active }}" href="about.html">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link {{ work_active }}" href="work.html">Work<span class="sr-only">(current)</span></a>
+                <a class="nav-link {{ research_active }}" href="research.html">Resarch<span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link {{ cv_active }}" href="curriculum_vitae.html">CV</a>
-            </li>
-            <li class="nav-item {{ books_active }} ">
-                <!-- <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
-                <a class="nav-link" href="books.html">Books</a>
+            <li class="nav-item {{ personal_active }} ">
+                <a class="nav-link" href="personal.html">Personal</a>
             </li>
         </ul>
     </div>
