ADD: Second revision changes from levin

--- a/content/templates/navbar_template.html
+++ b/content/templates/navbar_template.html
@@ -15,7 +15,7 @@
                 <a class="nav-link {{ about_active }}" href="about.html">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link {{ research_active }}" href="research.html">Resarch<span class="sr-only">(current)</span></a>
+                <a class="nav-link {{ research_active }}" href="research.html">Research<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item {{ personal_active }} ">
                 <a class="nav-link" href="personal.html">Personal</a>
