--- a/content/templates/personal_template.html
+++ b/content/templates/personal_template.html
@@ -16,7 +16,7 @@
 <div class="items style1 medium onscroll-fade-in">
     <section>
         <span><img src="images/marc_aurel.jpg" width="42" height="42" style="border-radius: 50%"></span>
-        <h3 class="booktitle">The Bookthief</h3>
+        <h3 class="booktitle">The Book Thief</h3>
         <h4 class="subtitle">Markus Zusak</h4>
         <p></p>
     </section>
