--- a/content/templates/personal_template.html
+++ b/content/templates/personal_template.html
@@ -15,44 +15,44 @@
 <p>Some of my favourite reads throughout the years :-)</p>
 <div class="items style1 medium onscroll-fade-in">
     <section>
-        <span><img src="images/marc_aurel.jpg" width="42" height="42" style="border-radius: 50%"></span>
+        <span><img src="images/book_icons/the_book_thief.jpg" width="42" height="42" style="border-radius: 50%"></span>
         <h3 class="booktitle">The Book Thief</h3>
         <h4 class="subtitle">Markus Zusak</h4>
         <p></p>
     </section>
     <section>
-        <span class="icon solid style2 major fa-save"></span>
+        <span><img src="images/book_icons/the_myth_of_sisyphus.jpg" width="42" height="42" style="border-radius: 50%"></span>
         <h3 class="booktitle">The Myth of Sisyphus</h3>
         <h4 class="subtitle">Albert Camus</h4>
         <p></p>
     </section>
     <section>
-        <span class="icon solid style2 major fa-chart-bar"></span>
+        <span><img src="images/book_icons/the_robot_series.png" width="42" height="42" style="border-radius: 50%"></span>
         <h3 class="booktitle">The Robot Series</h3>
         <h4 class="subtitle">Isaac Asimov</h4>
         <p>Four novels <i>(The Caves of Steel, The Naked Sun, The Robots of Dawn, Robots and Empire)</i> composing a
             standalone, unified sci-fi adventure of the highest calibre.</p>
     </section>
     <section>
-        <span class="icon solid style2 major fa-wifi"></span>
+        <span><img src="images/book_icons/meditations.png" width="42" height="42" style="border-radius: 50%"></span>
         <h3 class="booktitle">Meditations</h3>
         <h4 class="subtitle">Marcus Aurelius</h4>
         <p></p>
     </section>
     <section>
-        <span class="icon solid style2 major fa-wifi"></span>
+        <span><img src="images/book_icons/die_leiden_des_jungen_werther.png" width="42" height="42" style="border-radius: 50%"></span>
         <h3 class="booktitle">Die Leiden des jungen Werther</h3>
         <h4 class="subtitle">Johann Wolfgang von Goethe</h4>
         <p></p>
     </section>
     <section>
-        <span class="icon solid style2 major fa-wifi"></span>
+        <span><img src="images/book_icons/a_brief_history_of_time.png" width="42" height="42" style="border-radius: 50%"></span>
         <h3 class="booktitle">A Brief History of Time</h3>
         <h4 class="subtitle">Stephen Hawking</h4>
         <p></p>
     </section>
     <section>
-        <span class="icon solid style2 major fa-wifi"></span>
+        <span><img src="images/book_icons/flash_boys.png" width="42" height="42" style="border-radius: 50%"></span>
         <h3 class="booktitle">Flash Boys</h3>
         <h4 class="subtitle">Michael Lewis</h4>
         <p></p>
