--- a/content/templates/personal_template.html
+++ b/content/templates/personal_template.html
@@ -13,19 +13,19 @@
     }
 </style>
 
-<h2>>>Books</h2>
+<h2>>> Books</h2>
 
 <p>Some of my favourite reads throughout the years :-)</p>
 <div class="items style1 medium onscroll-fade-in">
     <section>
-        <span><img src="images/book_icons/the_book_thief.jpg" width="51" height="51" style="border-radius: 50%"></span>
+        <span><img src="images/book_icons/the_book_thief.jpg" width="50em" height="50em" style="border-radius: 50%"></span>
         <h3 class="booktitle">The Book Thief</h3>
         <h4 class="subtitle">Markus Zusak</h4>
         <p>A captivating story on the atrocities of the Third Reich, and the lives of a handful few which tried to do
             the right thing—told from the perspective of Death himself.</p>
     </section>
     <section>
-        <span><img src="images/book_icons/the_myth_of_sisyphus.jpg" width="51" height="51"
+        <span><img src="images/book_icons/the_myth_of_sisyphus.jpg" width="50em" height="50em"
                 style="border-radius: 50%"></span>
         <h3 class="booktitle">The Myth of Sisyphus</h3>
         <h4 class="subtitle">Albert Camus</h4>
@@ -33,7 +33,7 @@
             down again? If yes: what follows?</p>
     </section>
     <section>
-        <span><img src="images/book_icons/the_robot_series.png" width="51" height="51"
+        <span><img src="images/book_icons/the_robot_series.png" width="50em" height="50em"
                 style="border-radius: 50%"></span>
         <h3 class="booktitle">The Robot Series</h3>
         <h4 class="subtitle">Isaac Asimov</h4>
@@ -41,7 +41,7 @@
             standalone, unified sci-fi adventure of the highest calibre.</p>
     </section>
     <section>
-        <span><img src="images/book_icons/meditations.png" width="51" height="51" style="border-radius: 50%"></span>
+        <span><img src="images/book_icons/meditations.png" width="50em" height="50em" style="border-radius: 50%"></span>
         <h3 class="booktitle">Meditations</h3>
         <h4 class="subtitle">Marcus Aurelius</h4>
         <p>Although once the most powerful man in the world—the Roman emperor—Marcus Aurelius writes humbly in his
@@ -50,14 +50,14 @@
         </p>
     </section>
     <section>
-        <span><img src="images/book_icons/the_enchiridon.jpeg" width="51" height="51" style="border-radius: 50%"></span>
+        <span><img src="images/book_icons/the_enchiridion.jpeg" width="50em" height="50em" style="border-radius: 50%"></span>
         <h3 class="booktitle">Enchiridon</h3>
         <h4 class="subtitle">Epicetus</h4>
         <p>Concise, clear, powerful: Epictetus embodies the spirit of Stoicism in just shy of forty pages. A literal
             'handbook' for life. </p>
     </section>
     <section>
-        <span><img src="images/book_icons/die_leiden_des_jungen_werther.png" width="51" height="51"
+        <span><img src="images/book_icons/die_leiden_des_jungen_werther.png" width="50em" height="50em"
                 style="border-radius: 50%"></span>
         <h3 class="booktitle">Die Leiden des jungen Werther</h3>
         <h4 class="subtitle">Johann Wolfgang von Goethe</h4>
@@ -66,7 +66,7 @@
         </p>
     </section>
     <section>
-        <span><img src="images/book_icons/a_brief_history_of_time.png" width="51" height="51"
+        <span><img src="images/book_icons/a_brief_history_of_time.png" width="50em" height="50em"
                 style="border-radius: 50%"></span>
         <h3 class="booktitle">A Brief History of Time</h3>
         <h4 class="subtitle">Stephen Hawking</h4>
@@ -74,7 +74,7 @@
             you are interested in space and the universe, this is a must-read!</p>
     </section>
     <section>
-        <span><img src="images/book_icons/flash_boys.png" width="51" height="51" style="border-radius: 50%"></span>
+        <span><img src="images/book_icons/flash_boys.png" width="50em" height="50em" style="border-radius: 50%"></span>
         <h3 class="booktitle">Flash Boys</h3>
         <h4 class="subtitle">Michael Lewis</h4>
         <p>Flash Boys takes you behind the scenes of Wall Street investment banking and makes vivid what it is exactly
@@ -83,11 +83,11 @@
     </section>
 </div>
 
-<h2>>>Short Stories</h2>
+<h2>>> Short Stories</h2>
 
-<div class="items style1 medium onscroll-fade-in">
+<div class="items style1 medium">
     <section>
-        <span><img src="images/book_icons/the_complete_robot.png" width="51" height="51"
+        <span><img src="images/book_icons/the_complete_robot.png" width="50em" height="50em"
                 style="border-radius: 50%"></span>
         <h3 class="booktitle">The Complete Robot</h3>
         <h4 class="subtitle">Isaac Asimov</h4>
