CHANGE: Formatting of links

--- a/content/templates/research_template.html
+++ b/content/templates/research_template.html
@@ -15,8 +15,8 @@
                 fields such as
                 cognitive psychology and neuroscience in tandem with the philosopher's armchair. In
                 light of this, I am
-                currently part of a research group led by Dr. Markus Kneer <a
-                    href="https://markuskneer.com">[https://markuskneer.com]</a> called Reading Guilty
+                currently part of a research group led by <a href="https://markuskneer.com">Dr. Markus Kneer </a> called
+                Reading Guilty
                 Minds,
                 where we try to unravel the mysteries behind mental states such as belief, knowledge and
                 intention, and
@@ -37,10 +37,9 @@
             <p>
                 My Bachelor's Thesis concerned itself with the normative implications of modern
                 neuroscientific findings
-                for the criminal law. The full-text can be found on my ResearchGate profile here
-                <a
-                    href="https://www.researchgate.net/publication/336839623_From_Is_to_Ought_How_Scientific_Research_in_the_Field_of_Moral_Cognition_Can_Impact_the_Criminal_Law">
-                    [https://www.researchgate.net/publication/336839623_From_Is_to_Ought_How_Scientific_Research_in_the_Field_of_Moral_Cognition_Can_Impact_the_Criminal_Law]
+                for the criminal law. The full-text can be found
+                <a href="https://www.researchgate.net/publication/336839623_From_Is_to_Ought_How_Scientific_Research_in_the_Field_of_Moral_Cognition_Can_Impact_the_Criminal_Law">
+                    on my ResearchGate profile here
                 </a>.
             </p>
         </div>
