--- a/content/templates/personal_template.html
+++ b/content/templates/personal_template.html
@@ -13,7 +13,7 @@
     }
 </style>
 
-<h2>>> Books</h2>
+<h2>Books</h2>
 
 <p>Some of my favourite reads throughout the years :-)</p>
 <div class="items style1 medium onscroll-fade-in">
@@ -83,7 +83,7 @@
     </section>
 </div>
 
-<h2>>> Short Stories</h2>
+<h2>Short Stories</h2>
 
 <div class="items style1 medium">
     <section>
