FIX: Levin's quick fixes, sent over WA

--- a/content/templates/personal_template.html
+++ b/content/templates/personal_template.html
@@ -52,7 +52,7 @@
     <section>
         <span><img src="images/book_icons/the_enchiridion.jpeg" width="50em" height="50em" style="border-radius: 50%"></span>
         <h3 class="booktitle">Enchiridon</h3>
-        <h4 class="subtitle">Epicetus</h4>
+        <h4 class="subtitle">Epictetus</h4>
         <p>Concise, clear, powerful: Epictetus embodies the spirit of Stoicism in just shy of forty pages. A literal
             'handbook' for life. </p>
     </section>
