--- a/content/templates/research_template.html
+++ b/content/templates/research_template.html
@@ -16,8 +16,7 @@
                 cognitive psychology and neuroscience in tandem with the philosopher's armchair. In
                 light of this, I am
                 currently part of a research group led by <a href="https://markuskneer.com">Dr. Markus Kneer</a> called
-                Reading Guilty
-                Minds,
+                <i>Reading Guilty Minds</i>,
                 where we try to unravel the mysteries behind mental states such as belief, knowledge and
                 intention, and
                 draw conclusions for fields which concern themselves with these mental states—for
